mm_web_app/styles/pages/_home.scss
/* ... */
.section-list {
  padding-bottom: 1rem !important;
  text-align: left;
  .section-item {
    margin-bottom: 2rem;
    .maomao-img {
      max-height: 18px;
      vertical-align: top;
    }
    .lead {
      margin-bottom: 1rem;
      font-size: 1.875rem;
      line-height: 2.4375rem;
      color: #1c232e;
      font-weight: 600;
      word-break: break-word;
      .maomao-img {
        vertical-align: middle;
      }
      @media (max-width: 850px) {
        font-size: 1.625rem;
        line-height: 2rem;
      }
    }
    p {
      text-align: justify;
      @media (max-width: 590px) {
        margin-bottom: 1rem;
      }
    }
  }
  @media (max-width: 590px) {
    padding-top: 3rem;
  }
}

.share-line-left {
  &::after {
    @include abs-pos ($top: 19px, $right: 44px, $bottom: auto, $left: auto);
    content: '';
    width: 0;
    height: 0;
    border-top: 7px solid transparent;
    border-bottom: 7px solid transparent;
    border-left: 10px solid #2db7f5;
    background: none;
  }
}

.share-line-right {
  &::before {
    @include abs-pos ($top: 19px, $right: auto, $bottom: auto, $left: 44px);
    content: '';
    width: 0;
    height: 0;
    border-top: 7px solid transparent;
    border-bottom: 7px solid transparent;
    border-right: 10px solid #2db7f5;
    background: none;
  }
}

.card-topic {
  border: 0;
  .card-header {
    @include clearfix();
    padding: 0.625rem 1.5rem;
    a {
      &,
      &:hover,
      &:focus {
        text-decoration: none;
      }
      .share-name {
        min-width: 110px;
        max-width: 125px;
        text-overflow: ellipsis;
        white-space: nowrap;
        overflow: hidden;
        display: inline-block;
        text-align: left;
        @media (max-width: 390px) {
          max-width: 115px;
        }
      }
      &.collapsed {
        .share-name {
          color: #404040;
        }
      }
    }
    .collapse-title,
    .line-direct,
    .mix-detail {
      float: left;
    }
    .collapse-title {
      width: 180px;
      @media (max-width: 390px) {
        width: 170px;
      }
    }
    .line-card {
      margin-left: 180px;
      @media (max-width: 390px) {
        margin-left: 170px;
      }
    }
    .line-direct {
      position: relative;
      margin: 19px 0 10px;
      height: 3px;
      width: 100%;
      background-color: #2db7f5;
      &.share-line-left {
        &::after {
          right: -3px;
          top: -6px;
        }
      }
      &.share-line-right {
        &::before {
          left: -3px;
          top: -6px;
        }
      }
      @media (max-width: 500px) {
        min-width: 86px;
      }
      @media (max-width: 390px) {
        min-width: 45px;
      }
    }
    .mix-detail {
      padding-left: 14px;
      height: 40px;
      float: right;
      width: 90px;
      .three-dots {
        margin-top: 3px;
        font-size: 1.2rem;
        font-weight: bold;
        display: inline-block;
      }
      .topic-value {
        margin-top: 7px;
        display: inline-block;
        @media (max-width: 500px) {
          font-size: 0.875rem;
        }
      }
      @media (max-width: 390px) {
        padding-left: 7px;
        width: 75px;
      }
    }
    .card-header-cnt {
      @include clearfix();
      width: 100%;
      float: left;
      margin-right: -90px;
      .card-header-inner {
        @include clearfix();
        margin-right: 90px;
      }
      @media (max-width: 390px) {
        margin-right: -75px;
      }
    }
    @media (max-width: 767px) {
      padding: 0.625rem 0.9375rem;
    }
  }
  .card-block {
    padding: 10px 60px;
    @media (max-width: 767px) {
      padding: 10px 15px;
    }
  }
  &:last-child {
    .card-header {
      border-bottom: 0;
      @media (max-width: 590px) {
        border-bottom: 1px solid rgba(0, 0, 0, 0.125);
      }
    }
  }
}

.directional-user {
  @include clearfix();
  @include equal_height();
  align-items: center;
  cursor: pointer;
  .share-image {
    margin-right: 10px;
    width: 40px;
    float: left;
    .share-object {
      @include border-radius(50%);
      -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
      width: 40px;
      height: 40px;
      display: block;
    }
  }
  .share-name {
    display: block;
    font-weight: bold;
    color: #2db7f5;
    font-size: 0.8125rem;
  }
}
/* ... */

